# trainerz

./: .gitignore  Jenkinsfile  docker-compose.yml
client-web/: .eslintrc.json  .prettierrc  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client-web/.million/: store.json
client-web/src/Auth-Security/: Auth.ts  Security.ts
client-web/src/Meta/: Meta.tsx
client-web/src/app/: StoreProvider.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
client-web/src/hooks/: useAccount.ts  useAccountOwnerCheck.ts  useAccountServerSide.ts  useSocket.ts  useSubscriptionCheck.ts  useWorkoutProgram.ts
client-web/src/lib/: Stripe.ts
server/chat-server/: .env  Dockerfile  go.mod  go.sum  main.go
server/chat-server/config/: config.go
server/chat-server/models/: Chat_Model.go
server/chat-server/routes/: socket_routes.go
server/chat-server/services/: socket_service.go
server/chat-server/util/: util.go
server/db/: scylla.yaml
server/db/sql/: comments.sql  ratings.sql  (+6 more)
server/file-server/: go.mod  go.sum  main.go
server/main-backend/: .eslintrc.json  WORKSPACE  dockerfile  package-lock.json  package.json  tsconfig.json
server/search-server/: Dockerfile  go.mod  go.sum  main.go
server/sql/: ratings.sql  users.sql  videos.sql
server/video-stream-server/: BUILD  MODULE.bazel  WORKSPACE  bazel-video-stream-server  pom.xml
server/video-stream-server/src/main/java/platform/api/videostreamapi/: VideoStreamApiApplication.java
server/video-stream-server/src/main/java/platform/api/videostreamapi/services/: VideoServices.java
server/video-stream-server/src/main/resources/: application.properties
(+113 files in other folders)
