"Bazel dependencies"

bazel_dep(name = "aspect_bazel_lib", version = "2.7.7")
bazel_dep(name = "container_structure_test", version = "1.16.0")
bazel_dep(name = "rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_oci", version = "1.4.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.12",
        "com.google.guava:guava:28.0-jre",
        "org.springframework.boot:spring-boot-starter:3.0.2",
        "org.springframework.boot:spring-boot-starter-web:3.0.2",
        "org.springframework.boot:spring-boot-starter-webflux:3.0.2",
        "org.springframework.boot:spring-boot-starter-actuator:3.0.2",
        "org.springframework.boot:spring-boot-starter-data-jpa:3.0.2",
        "org.springframework.boot:spring-boot-devtools:3.0.2",
        "org.springframework.boot:spring-boot-starter-test:3.0.2",
        "org.postgresql:postgresql:42.2.20",
        "com.googlecode.json-simple:json-simple:1.1.1",
        "jakarta.persistence:jakarta.persistence-api:2.2.3",
        "io.projectreactor:reactor-core:3.4.10",
    ],
    fetch_sources = True,
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
)
use_repo(maven, "maven")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    digest = "sha256:161a1d97d592b3f1919801578c3a47c8e932071168a96267698f4b669c24c76d",
    image = "gcr.io/distroless/java17",
)
use_repo(oci, "distroless_java")